🔧 Fixed css style showing two scrollbars

--- a/src/style.scss
+++ b/src/style.scss
@@ -61,6 +61,11 @@ $link: $pink;
 $link-visited: $pink;
 $link-focus-border: $pink;
 
+// variables
+
+$body-overflow-x: initial;
+$body-overflow-y: initial;
+
 // typography
 
 $size-1: 3.0625rem;
